--- a/asmComander/asmComander.vcxproj
+++ b/asmComander/asmComander.vcxproj
@@ -128,15 +128,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AsmCommander.cpp" />
+    <ClCompile Include="Common.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Panel.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="aCom.asm">
+    <MASM Include="AsmTools.asm">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </MASM>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AsmCommander.h" />
+    <ClInclude Include="AsmToolsInterface.h" />
+    <ClInclude Include="Common.h" />
     <ClInclude Include="Panel.h" />
     <ClInclude Include="Main.h" />
   </ItemGroup>
