--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -8,4 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="src\close.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="src\close.png" />
+  </ItemGroup>
+
 </Project>
